cond and for lax primitive

--- a/src/04_jax_lax_primitive.ipynb
+++ b/src/04_jax_lax_primitive.ipynb
@@ -11,7 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Switch"
+    "## Switch\n",
+    "\n",
+    "```python\n",
+    "def switch(index, branches, *operands):\n",
+    "  index = clamp(0, index, len(branches) - 1)\n",
+    "  return branches[index](*operands)\n",
+    "```"
    ]
   },
   {
@@ -82,20 +88,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Array(0.5, dtype=float32, weak_type=True)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "apply_rand_fn(5.0, rand_fn, random.PRNGKey(345))"
    ]
@@ -118,6 +113,190 @@
    ],
    "source": [
     "apply_rand_fn(jnp.array([5.0, 2.0]), rand_fn, random.PRNGKey(433))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cond\n",
+    "\n",
+    "```python\n",
+    "def cond(pred, true_fun, false_fun, *operands):\n",
+    "  if pred:\n",
+    "    return true_fun(*operands)\n",
+    "  else:\n",
+    "    return false_fun(*operands)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{ lambda ; a:i32[]. let\n",
+       "    b:bool[] = gt a 0\n",
+       "    c:i32[] = convert_element_type[new_dtype=int32 weak_type=False] b\n",
+       "    d:i32[] = cond[\n",
+       "      branches=(\n",
+       "        { lambda ; e:i32[]. let  in (0,) }\n",
+       "        { lambda ; f:i32[]. let  in (f,) }\n",
+       "      )\n",
+       "      linear=(False,)\n",
+       "    ] c a\n",
+       "  in (d,) }"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import jax\n",
+    "\n",
+    "\n",
+    "def relu(x):\n",
+    "    return jax.lax.cond(x > 0, lambda x: x, lambda x: 0, x)\n",
+    "\n",
+    "\n",
+    "jaxpr = jax.make_jaxpr(relu)(10)\n",
+    "jaxpr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array(10, dtype=int32, weak_type=True)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jax.jit(relu)(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array(0, dtype=int32, weak_type=True)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jax.jit(relu)(-10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array(0, dtype=int32, weak_type=True)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jax.jit(relu)(0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## For loop\n",
+    "\n",
+    "```python\n",
+    "def fori_loop(lower, upper, body_fun, init_val):\n",
+    "  val = init_val\n",
+    "  for i in range(lower, upper):\n",
+    "    val = body_fun(i, val)\n",
+    "  return val\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{ lambda ; a:i32[]. let\n",
+       "    _:i32[] _:i32[] b:i32[] = while[\n",
+       "      body_jaxpr={ lambda ; c:i32[] d:i32[] e:i32[]. let\n",
+       "          f:i32[] = add c 1\n",
+       "          g:i32[] = add c e\n",
+       "        in (f, d, g) }\n",
+       "      body_nconsts=0\n",
+       "      cond_jaxpr={ lambda ; h:i32[] i:i32[] j:i32[]. let\n",
+       "          k:bool[] = lt h i\n",
+       "        in (k,) }\n",
+       "      cond_nconsts=0\n",
+       "    ] 0 a 0\n",
+       "  in (b,) }"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def f(x):\n",
+    "    return jax.lax.fori_loop(0, x, lambda i, val: i + val, 0)\n",
+    "\n",
+    "jaxpr_lax = jax.make_jaxpr(f)(5)\n",
+    "jaxpr_lax"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array(10, dtype=int32, weak_type=True)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jax.jit(f)(5)"
    ]
   },
   {
@@ -155,15 +334,17 @@
     }
    ],
    "source": [
-    "from jax import grad,make_jaxpr\n",
+    "from jax import grad, make_jaxpr\n",
     "import util\n",
     "\n",
-    "def f(x,y):\n",
+    "\n",
+    "def f(x, y):\n",
     "    return x**2 + y**2\n",
     "\n",
-    "df = grad(f,argnums=(0,1),has_aux=False)\n",
     "\n",
-    "f(2.0,3.0),df(2.0,3.0)"
+    "df = grad(f, argnums=(0, 1), has_aux=False)\n",
+    "\n",
+    "f(2.0, 3.0), df(2.0, 3.0)"
    ]
   },
   {
@@ -193,7 +374,7 @@
     }
    ],
    "source": [
-    "make_jaxpr(df)(2.0,3.0)"
+    "make_jaxpr(df)(2.0, 3.0)"
    ]
   },
   {
@@ -298,15 +479,15 @@
        "<path fill=\"none\" stroke=\"black\" d=\"M218.41,-215.97C254.01,-203.57 301.45,-187.05 333.82,-175.77\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"335.06,-179.05 343.35,-172.45 332.76,-172.44 335.06,-179.05\"/>\n",
        "</g>\n",
-       "<!-- 139684483984432 -->\n",
+       "<!-- 140351575572432 -->\n",
        "<g id=\"node5\" class=\"node\">\n",
-       "<title>139684483984432</title>\n",
+       "<title>140351575572432</title>\n",
        "<ellipse fill=\"#ffc125\" stroke=\"#ffc125\" cx=\"406.5\" cy=\"-234\" rx=\"49.29\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"406.5\" y=\"-230.3\" font-family=\"Times,serif\" font-size=\"14.00\">float32[]</text>\n",
        "</g>\n",
-       "<!-- 139684483984432&#45;&gt;e -->\n",
+       "<!-- 140351575572432&#45;&gt;e -->\n",
        "<g id=\"edge3\" class=\"edge\">\n",
-       "<title>139684483984432&#45;&gt;e</title>\n",
+       "<title>140351575572432&#45;&gt;e</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M397.79,-216.05C393.65,-208.01 388.61,-198.2 383.99,-189.23\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"387.07,-187.57 379.38,-180.28 380.85,-190.77 387.07,-187.57\"/>\n",
        "</g>\n",
@@ -340,15 +521,15 @@
        "<path fill=\"none\" stroke=\"black\" d=\"M620.98,-215.7C610.63,-206.97 597.91,-196.24 586.66,-186.75\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"588.68,-183.88 578.78,-180.1 584.17,-189.23 588.68,-183.88\"/>\n",
        "</g>\n",
-       "<!-- 139684483988688 -->\n",
+       "<!-- 140351570488368 -->\n",
        "<g id=\"node9\" class=\"node\">\n",
-       "<title>139684483988688</title>\n",
+       "<title>140351570488368</title>\n",
        "<ellipse fill=\"#ffc125\" stroke=\"#ffc125\" cx=\"523.5\" cy=\"-234\" rx=\"49.29\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"523.5\" y=\"-230.3\" font-family=\"Times,serif\" font-size=\"14.00\">float32[]</text>\n",
        "</g>\n",
-       "<!-- 139684483988688&#45;&gt;h -->\n",
+       "<!-- 140351570488368&#45;&gt;h -->\n",
        "<g id=\"edge7\" class=\"edge\">\n",
-       "<title>139684483988688&#45;&gt;h</title>\n",
+       "<title>140351570488368&#45;&gt;h</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M531.97,-216.05C536,-208.01 540.9,-198.2 545.39,-189.23\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"548.52,-190.78 549.86,-180.28 542.26,-187.65 548.52,-190.78\"/>\n",
        "</g>\n",
@@ -364,21 +545,21 @@
        "<path fill=\"none\" stroke=\"black\" d=\"M546.39,-143.7C540.63,-135.47 533.64,-125.48 527.29,-116.42\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"530.08,-114.29 521.47,-108.1 524.34,-118.3 530.08,-114.29\"/>\n",
        "</g>\n",
-       "<!-- 139684484747440 -->\n",
+       "<!-- 140351348920656 -->\n",
        "<g id=\"node12\" class=\"node\">\n",
-       "<title>139684484747440</title>\n",
+       "<title>140351348920656</title>\n",
        "<ellipse fill=\"#ffc125\" stroke=\"#ffc125\" cx=\"464.5\" cy=\"-162\" rx=\"49.29\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"464.5\" y=\"-158.3\" font-family=\"Times,serif\" font-size=\"14.00\">float32[]</text>\n",
        "</g>\n",
-       "<!-- 139684484747440&#45;&gt;i -->\n",
+       "<!-- 140351348920656&#45;&gt;i -->\n",
        "<g id=\"edge11\" class=\"edge\">\n",
-       "<title>139684484747440&#45;&gt;i</title>\n",
+       "<title>140351348920656&#45;&gt;i</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M475.16,-144.41C480.44,-136.2 486.94,-126.1 492.85,-116.9\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"495.82,-118.75 498.28,-108.45 489.93,-114.97 495.82,-118.75\"/>\n",
        "</g>\n",
-       "<!-- 139684484747440&#45;&gt;j -->\n",
+       "<!-- 140351348920656&#45;&gt;j -->\n",
        "<g id=\"edge13\" class=\"edge\">\n",
-       "<title>139684484747440&#45;&gt;j</title>\n",
+       "<title>140351348920656&#45;&gt;j</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M453.6,-144.41C448.2,-136.2 441.57,-126.1 435.52,-116.9\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"438.38,-114.88 429.97,-108.45 432.53,-118.73 438.38,-114.88\"/>\n",
        "</g>\n",
@@ -410,7 +591,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f0ad4109110>"
+       "<graphviz.graphs.Digraph at 0x7fa6257c8550>"
       ]
      },
      "execution_count": 9,
@@ -419,7 +600,7 @@
     }
    ],
    "source": [
-    "util.jaxpr_graph(df,2.0,3.0)"
+    "util.jaxpr_graph(df, 2.0, 3.0)"
    ]
   },
   {
@@ -442,12 +623,15 @@
    ],
    "source": [
     "from jax.lax import stop_gradient\n",
-    "def f(x,y):\n",
+    "\n",
+    "\n",
+    "def f(x, y):\n",
     "    return x**2 + stop_gradient(y**2)\n",
     "\n",
-    "df = grad(f,argnums=(0,1),has_aux=False)\n",
     "\n",
-    "f(2.0,3.0),df(2.0,3.0)"
+    "df = grad(f, argnums=(0, 1), has_aux=False)\n",
+    "\n",
+    "f(2.0, 3.0), df(2.0, 3.0)"
    ]
   },
   {
@@ -477,7 +661,7 @@
     }
    ],
    "source": [
-    "make_jaxpr(df)(2.0,3.0)"
+    "make_jaxpr(df)(2.0, 3.0)"
    ]
   },
   {
@@ -582,15 +766,15 @@
        "<path fill=\"none\" stroke=\"black\" d=\"M535.08,-215.7C542.16,-207.3 550.78,-197.07 558.55,-187.86\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"561.31,-190.01 565.08,-180.1 555.96,-185.49 561.31,-190.01\"/>\n",
        "</g>\n",
-       "<!-- 139684484749680 -->\n",
+       "<!-- 140351348922896 -->\n",
        "<g id=\"node5\" class=\"node\">\n",
-       "<title>139684484749680</title>\n",
+       "<title>140351348922896</title>\n",
        "<ellipse fill=\"#ffc125\" stroke=\"#ffc125\" cx=\"638.5\" cy=\"-234\" rx=\"49.29\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"638.5\" y=\"-230.3\" font-family=\"Times,serif\" font-size=\"14.00\">float32[]</text>\n",
        "</g>\n",
-       "<!-- 139684484749680&#45;&gt;e -->\n",
+       "<!-- 140351348922896&#45;&gt;e -->\n",
        "<g id=\"edge3\" class=\"edge\">\n",
-       "<title>139684484749680&#45;&gt;e</title>\n",
+       "<title>140351348922896&#45;&gt;e</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M624.52,-216.41C617.45,-208.03 608.73,-197.68 600.85,-188.33\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"603.33,-185.84 594.21,-180.45 597.97,-190.35 603.33,-185.84\"/>\n",
        "</g>\n",
@@ -624,15 +808,15 @@
        "<path fill=\"none\" stroke=\"black\" d=\"M55.24,-287.7C61.47,-267.95 74.2,-235.81 95.5,-216 120.82,-192.46 158.1,-178.59 185.73,-170.99\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"186.63,-174.37 195.43,-168.47 184.87,-167.6 186.63,-174.37\"/>\n",
        "</g>\n",
-       "<!-- 139684483980592 -->\n",
+       "<!-- 140351570489680 -->\n",
        "<g id=\"node9\" class=\"node\">\n",
-       "<title>139684483980592</title>\n",
+       "<title>140351570489680</title>\n",
        "<ellipse fill=\"#ffc125\" stroke=\"#ffc125\" cx=\"283.5\" cy=\"-234\" rx=\"49.29\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"283.5\" y=\"-230.3\" font-family=\"Times,serif\" font-size=\"14.00\">float32[]</text>\n",
        "</g>\n",
-       "<!-- 139684483980592&#45;&gt;_ -->\n",
+       "<!-- 140351570489680&#45;&gt;_ -->\n",
        "<g id=\"edge7\" class=\"edge\">\n",
-       "<title>139684483980592&#45;&gt;_</title>\n",
+       "<title>140351570489680&#45;&gt;_</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M269.04,-216.41C261.67,-207.95 252.54,-197.47 244.33,-188.05\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"246.91,-185.69 237.7,-180.45 241.63,-190.29 246.91,-185.69\"/>\n",
        "</g>\n",
@@ -642,15 +826,15 @@
        "<path fill=\"none\" stroke=\"black\" d=\"M175.83,-215.7C183.26,-207.3 192.32,-197.07 200.48,-187.86\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"203.34,-189.91 207.35,-180.1 198.1,-185.27 203.34,-189.91\"/>\n",
        "</g>\n",
-       "<!-- 139684484750736 -->\n",
+       "<!-- 140351348923952 -->\n",
        "<g id=\"node12\" class=\"node\">\n",
-       "<title>139684484750736</title>\n",
+       "<title>140351348923952</title>\n",
        "<ellipse fill=\"#ffc125\" stroke=\"#ffc125\" cx=\"485.5\" cy=\"-162\" rx=\"49.29\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"485.5\" y=\"-158.3\" font-family=\"Times,serif\" font-size=\"14.00\">float32[]</text>\n",
        "</g>\n",
-       "<!-- 139684484750736&#45;&gt;i -->\n",
+       "<!-- 140351348923952&#45;&gt;i -->\n",
        "<g id=\"edge12\" class=\"edge\">\n",
-       "<title>139684484750736&#45;&gt;i</title>\n",
+       "<title>140351348923952&#45;&gt;i</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M496.64,-144.41C502.15,-136.2 508.93,-126.1 515.11,-116.9\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"518.12,-118.7 520.79,-108.45 512.31,-114.8 518.12,-118.7\"/>\n",
        "</g>\n",
@@ -688,7 +872,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f0ad410f810>"
+       "<graphviz.graphs.Digraph at 0x7fa6184eb150>"
       ]
      },
      "execution_count": 12,
@@ -697,7 +881,7 @@
     }
    ],
    "source": [
-    "util.jaxpr_graph(df,2.0,3.0)"
+    "util.jaxpr_graph(df, 2.0, 3.0)"
    ]
   },
   {
