--- a/src/06_jit.ipynb
+++ b/src/06_jit.ipynb
@@ -1001,7 +1001,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tracing\n",
+    "### Tracing\n",
     "\n",
     "* Python Program  --> Jaxpr static typed Expression us done by process called Tracing.\n",
     "* During Tracing the argument are wrapped by Tracer object. By default `SharedArray` is tracer Object\n",
@@ -1013,7 +1013,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Wrapped by tracer object"
+    "#### Wrapped by tracer object"
    ]
   },
   {
@@ -1126,7 +1126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Control flow in tracing\n",
+    "#### Control flow in tracing\n",
     "\n",
     "* Input should used to control the flow the program execution.\n",
     "* but it use the `Input shape` to control the flow"
@@ -1238,7 +1238,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Use static arg to use the input in control statement\n",
+    "#### Use static arg to use the input in control statement\n",
     "\n",
     "Here is the tradeoff. Your function is now being compiled on any call with a new input parameter value"
    ]
@@ -1308,7 +1308,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### use lax control flow operator to control the execution"
+    "#### use lax control flow operator to control the execution"
    ]
   },
   {
@@ -1489,6 +1489,145 @@
    ],
    "source": [
     "jax.jit(f)(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## XLA\n",
+    "\n",
+    "The compilation flow of JAX looks like this, roughly: Python -> jaxpr -> MHLO -> optimized MHLO -> HLO -> optimized HLO."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array(27., dtype=float32)"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import jax\n",
+    "import jax.numpy as jnp\n",
+    "\n",
+    "\n",
+    "def f(x,y,z):\n",
+    "    return jnp.sum(x+y *z)\n",
+    "\n",
+    "\n",
+    "x = jnp.array([1.0, 1.0, 1.0])\n",
+    "y = jnp.ones((3,3))*2.0\n",
+    "z = jnp.array([2.0, 1.0, 0.0]).T     \n",
+    "\n",
+    "f(x,y,z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<PjitFunction of <function f at 0x7f561c6371a0>>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f_jit = jax.jit(f)\n",
+    "f_jit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "module @jit_f attributes {mhlo.num_partitions = 1 : i32, mhlo.num_replicas = 1 : i32} {\n",
+      "  func.func public @main(%arg0: tensor<3xf32> {mhlo.layout_mode = \"default\", mhlo.sharding = \"{replicated}\"}, %arg1: tensor<3x3xf32> {mhlo.layout_mode = \"default\", mhlo.sharding = \"{replicated}\"}, %arg2: tensor<3xf32> {mhlo.layout_mode = \"default\", mhlo.sharding = \"{replicated}\"}) -> (tensor<f32> {jax.result_info = \"\", mhlo.layout_mode = \"default\"}) {\n",
+      "    %0 = stablehlo.broadcast_in_dim %arg2, dims = [1] : (tensor<3xf32>) -> tensor<1x3xf32>\n",
+      "    %1 = stablehlo.broadcast_in_dim %0, dims = [0, 1] : (tensor<1x3xf32>) -> tensor<3x3xf32>\n",
+      "    %2 = stablehlo.multiply %arg1, %1 : tensor<3x3xf32>\n",
+      "    %3 = stablehlo.broadcast_in_dim %arg0, dims = [1] : (tensor<3xf32>) -> tensor<1x3xf32>\n",
+      "    %4 = stablehlo.broadcast_in_dim %3, dims = [0, 1] : (tensor<1x3xf32>) -> tensor<3x3xf32>\n",
+      "    %5 = stablehlo.add %4, %2 : tensor<3x3xf32>\n",
+      "    %6 = stablehlo.constant dense<0.000000e+00> : tensor<f32>\n",
+      "    %7 = stablehlo.reduce(%5 init: %6) applies stablehlo.add across dimensions = [0, 1] : (tensor<3x3xf32>, tensor<f32>) -> tensor<f32>\n",
+      "    return %7 : tensor<f32>\n",
+      "  }\n",
+      "}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "f_lowered = f_jit.lower(x,y,z)\n",
+    "print(f_lowered.as_text())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HloModule jit_f, is_scheduled=true, entry_computation_layout={(f32[3]{0}, f32[3,3]{1,0}, f32[3]{0})->f32[]}, allow_spmd_sharding_propagation_to_output={true}\n",
+      "\n",
+      "%region_0.15 (Arg_0.16: f32[], Arg_1.17: f32[]) -> f32[] {\n",
+      "  %Arg_1.17 = f32[] parameter(1)\n",
+      "  %Arg_0.16 = f32[] parameter(0)\n",
+      "  ROOT %add = f32[] add(f32[] %Arg_0.16, f32[] %Arg_1.17), metadata={op_name=\"jit(f)/jit(main)/reduce_sum[axes=(0, 1)]\" source_file=\"/tmp/ipykernel_42073/582377103.py\" source_line=6}\n",
+      "}\n",
+      "\n",
+      "%fused_computation (param_0.4: f32[3,3], param_1.4: f32[3], param_2.2: f32[3]) -> f32[] {\n",
+      "  %param_2.2 = f32[3]{0} parameter(2)\n",
+      "  %broadcast.5 = f32[3,3]{1,0} broadcast(f32[3]{0} %param_2.2), dimensions={1}, metadata={op_name=\"jit(f)/jit(main)/add\" source_file=\"/tmp/ipykernel_42073/582377103.py\" source_line=6}\n",
+      "  %param_0.4 = f32[3,3]{1,0} parameter(0)\n",
+      "  %param_1.4 = f32[3]{0} parameter(1)\n",
+      "  %broadcast.4 = f32[3,3]{1,0} broadcast(f32[3]{0} %param_1.4), dimensions={1}, metadata={op_name=\"jit(f)/jit(main)/mul\" source_file=\"/tmp/ipykernel_42073/582377103.py\" source_line=6}\n",
+      "  %multiply.1 = f32[3,3]{1,0} multiply(f32[3,3]{1,0} %param_0.4, f32[3,3]{1,0} %broadcast.4), metadata={op_name=\"jit(f)/jit(main)/mul\" source_file=\"/tmp/ipykernel_42073/582377103.py\" source_line=6}\n",
+      "  %add.2 = f32[3,3]{1,0} add(f32[3,3]{1,0} %broadcast.5, f32[3,3]{1,0} %multiply.1), metadata={op_name=\"jit(f)/jit(main)/add\" source_file=\"/tmp/ipykernel_42073/582377103.py\" source_line=6}\n",
+      "  %bitcast.17 = f32[9]{0} bitcast(f32[3,3]{1,0} %add.2), metadata={op_name=\"jit(f)/jit(main)/add\" source_file=\"/tmp/ipykernel_42073/582377103.py\" source_line=6}\n",
+      "  %constant_0 = f32[] constant(0)\n",
+      "  ROOT %reduce.1 = f32[] reduce(f32[9]{0} %bitcast.17, f32[] %constant_0), dimensions={0}, to_apply=%region_0.15, metadata={op_name=\"jit(f)/jit(main)/reduce_sum[axes=(0, 1)]\" source_file=\"/tmp/ipykernel_42073/582377103.py\" source_line=6}\n",
+      "}\n",
+      "\n",
+      "ENTRY %main.20 (Arg_0.1: f32[3], Arg_1.2: f32[3,3], Arg_2.3: f32[3]) -> f32[] {\n",
+      "  %Arg_2.3 = f32[3]{0} parameter(2), sharding={replicated}\n",
+      "  %Arg_1.2 = f32[3,3]{1,0} parameter(1), sharding={replicated}\n",
+      "  %Arg_0.1 = f32[3]{0} parameter(0), sharding={replicated}\n",
+      "  ROOT %fusion = f32[] fusion(f32[3,3]{1,0} %Arg_1.2, f32[3]{0} %Arg_2.3, f32[3]{0} %Arg_0.1), kind=kLoop, calls=%fused_computation, frontend_attributes={fingerprint_before_lhs=\"7222fc3acf31983485523d00ee849b6f\"}, metadata={op_name=\"jit(f)/jit(main)/reduce_sum[axes=(0, 1)]\" source_file=\"/tmp/ipykernel_42073/582377103.py\" source_line=6}\n",
+      "}\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "f_complied = f_lowered.compile()\n",
+    "print(f_complied.as_text())"
    ]
   },
   {
