--- a/src/10_jax_primitive_working..ipynb
+++ b/src/10_jax_primitive_working..ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -193,12 +193,12 @@
      "output_type": "stream",
      "text": [
       "Traceback (most recent call last):\n",
-      "  File \"/tmp/ipykernel_28815/2844449444.py\", line 2, in <module>\n",
+      "  File \"/tmp/ipykernel_30442/2844449444.py\", line 2, in <module>\n",
       "    square_add_prim(2., 10.)\n",
-      "  File \"/tmp/ipykernel_28815/1717318103.py\", line 16, in square_add_prim\n",
+      "  File \"/tmp/ipykernel_30442/1717318103.py\", line 16, in square_add_prim\n",
       "    return multiply_add_prim(a, a, b)\n",
       "           ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/tmp/ipykernel_28815/1717318103.py\", line 11, in multiply_add_prim\n",
+      "  File \"/tmp/ipykernel_30442/1717318103.py\", line 11, in multiply_add_prim\n",
       "    return multiply_add_p.bind(x, y, z)\n",
       "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
       "NotImplementedError: Evaluation rule for 'multiply_add' not implemented\n"
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
        "<function __main__.multiply_add_impl(x, y, z)>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
      "output_type": "stream",
      "text": [
       "Traceback (most recent call last):\n",
-      "  File \"/tmp/ipykernel_28815/1813425700.py\", line 2, in <module>\n",
+      "  File \"/tmp/ipykernel_30442/1813425700.py\", line 2, in <module>\n",
       "    api.jit(square_add_prim)(2., 10.)\n",
       "  File \"/root/miniconda3/envs/nlp/lib/python3.11/site-packages/jax/_src/traceback_util.py\", line 179, in reraise_with_filtered_traceback\n",
       "    return fun(*args, **kwargs)\n",
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
        "<function __main__.multiply_add_abstract_eval(xs, ys, zs)>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
       "The above exception was the direct cause of the following exception:\n",
       "\n",
       "Traceback (most recent call last):\n",
-      "  File \"/tmp/ipykernel_28815/1813425700.py\", line 2, in <module>\n",
+      "  File \"/tmp/ipykernel_30442/1813425700.py\", line 2, in <module>\n",
       "    api.jit(square_add_prim)(2., 10.)\n",
       "  File \"/root/miniconda3/envs/nlp/lib/python3.11/site-packages/jax/_src/traceback_util.py\", line 179, in reraise_with_filtered_traceback\n",
       "    return fun(*args, **kwargs)\n",
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
        "<function __main__.multiply_add_lowering(ctx, xc, yc, zc)>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
      "output_type": "stream",
      "text": [
       "Traceback (most recent call last):\n",
-      "  File \"/tmp/ipykernel_28815/800067577.py\", line 5, in <module>\n",
+      "  File \"/tmp/ipykernel_30442/800067577.py\", line 5, in <module>\n",
       "    api.jvp(square_add_prim, (2., 10.), (1., 1.))\n",
       "  File \"/root/miniconda3/envs/nlp/lib/python3.11/site-packages/jax/_src/api.py\", line 1945, in jvp\n",
       "    return _jvp(lu.wrap_init(fun), primals, tangents, has_aux=has_aux)\n",
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +604,7 @@
       "The above exception was the direct cause of the following exception:\n",
       "\n",
       "Traceback (most recent call last):\n",
-      "  File \"/tmp/ipykernel_28815/339076514.py\", line 3, in <module>\n",
+      "  File \"/tmp/ipykernel_30442/339076514.py\", line 3, in <module>\n",
       "    api.grad(square_add_prim)(2., 10.)\n",
       "  File \"/root/miniconda3/envs/nlp/lib/python3.11/site-packages/jax/_src/traceback_util.py\", line 179, in reraise_with_filtered_traceback\n",
       "    return fun(*args, **kwargs)\n",
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +654,7 @@
        "jax._src.core.Primitive"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +747,7 @@
        "<function __main__.multiply_add_impl(x, y, z)>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -776,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -803,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +812,7 @@
        "<function __main__.multiply_add_abstract_eval(xs, ys, zs)>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -858,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -867,7 +867,7 @@
        "<function __main__.multiply_add_lowering(ctx, xc, yc, zc)>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -886,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -895,7 +895,7 @@
        "Array(14., dtype=float32)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -906,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -926,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1047,7 +1047,7 @@
        " 'zip']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1067,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1089,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1099,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1110,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1143,7 +1143,7 @@
       "The above exception was the direct cause of the following exception:\n",
       "\n",
       "Traceback (most recent call last):\n",
-      "  File \"/tmp/ipykernel_31252/846820585.py\", line 2, in <module>\n",
+      "  File \"/tmp/ipykernel_30442/846820585.py\", line 2, in <module>\n",
       "    jax.grad(square_add_prim)(2.,10.)\n",
       "  File \"/root/miniconda3/envs/nlp/lib/python3.11/site-packages/jax/_src/traceback_util.py\", line 179, in reraise_with_filtered_traceback\n",
       "    return fun(*args, **kwargs)\n",
@@ -1166,6 +1166,117 @@
     "    jax.grad(square_add_prim)(2.,10.)\n",
     "except Exception:\n",
     "    traceback.print_exc(limit=5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reverse Rule"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def multiply_add_transpose(ct,x,y,z):\n",
+    "    if not ad.is_undefined_primal(x):\n",
+    "        assert ad.is_undefined_primal(y)\n",
+    "        ct_y = ad.Zero(y.aval) if type(ct) is ad.Zero else multiply_add_prim(x,ct,jax.lax.zeros_like_array(x))\n",
+    "        res = None,ct_y,ct\n",
+    "    else:\n",
+    "        assert ad.is_undefined_primal(x)\n",
+    "        ct_x = ad.Zero(x.aval) if type(ct) is ad.Zero else multiply_add_prim(ct,y,jax.lax.zeros_like_array(y))\n",
+    "        res = ct_x,None,ct\n",
+    "    return res\n",
+    "\n",
+    "ad.primitive_transposes[multiply_add_p] = multiply_add_transpose"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array(4., dtype=float32)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jax.grad(square_add_prim)(2.0,10.0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Batching"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Batching rule for 'multiply_add' not implemented\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    jax.vmap(square_add_prim,in_axes=0,out_axes=0)(np.array([2.,3.]),np.array([10.,20.]))\n",
+    "except Exception as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from jax.interpreters import  batching\n",
+    "\n",
+    "def mul_add_batch(vector_arg_values,batch_axes):\n",
+    "    assert batch_axes[0] == batch_axes[1]\n",
+    "    assert batch_axes[0] == batch_axes[2]\n",
+    "    res = multiply_add_prim(*vector_arg_values)\n",
+    "    return res,batch_axes[0]\n",
+    "\n",
+    "batching.primitive_batchers[multiply_add_p] = mul_add_batch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([14., 29.])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jax.vmap(square_add_prim,in_axes=0,out_axes=0)(np.array([2.,3.]),np.array([10.,20.]))"
    ]
   },
   {
