--- a/src/04_jax_lax_primitive.ipynb
+++ b/src/04_jax_lax_primitive.ipynb
@@ -885,6 +885,171 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Operators"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Broadcast_in_dim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import jax\n",
+    "import jax.numpy as jnp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array([0, 1, 2, 3], dtype=int32)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input_array = jnp.arange(4)\n",
+    "input_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array([[[0, 1, 2, 3],\n",
+       "        [0, 1, 2, 3],\n",
+       "        [0, 1, 2, 3]],\n",
+       "\n",
+       "       [[0, 1, 2, 3],\n",
+       "        [0, 1, 2, 3],\n",
+       "        [0, 1, 2, 3]]], dtype=int32)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out = jax.lax.broadcast_in_dim(operand=input_array,shape=(2,3,4),broadcast_dimensions=(2,))\n",
+    "out\n",
+    "# here shape is target shape \n",
+    "# broadcast_dimensions --> dimension which match the input shape and target shape\n",
+    "# input shape -- > (4,)\n",
+    "# target_shape --> (2,3,4)\n",
+    "# at 2 dimension of target shape match input shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array([[0, 1, 2],\n",
+       "       [3, 4, 5]], dtype=int32)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input_array = jnp.arange(6).reshape(2,3)\n",
+    "input_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array([[[0, 0, 0, 0],\n",
+       "        [1, 1, 1, 1],\n",
+       "        [2, 2, 2, 2]],\n",
+       "\n",
+       "       [[3, 3, 3, 3],\n",
+       "        [4, 4, 4, 4],\n",
+       "        [5, 5, 5, 5]]], dtype=int32)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out = jax.lax.broadcast_in_dim(operand=input_array,shape=(2,3,4),broadcast_dimensions=(0,1,))\n",
+    "out\n",
+    "# here shape is target shape \n",
+    "# broadcast_dimensions --> dimension which match the input shape and target shape\n",
+    "# input shape -- > (2,3,)\n",
+    "# target_shape --> (2,3,4)\n",
+    "# at (0,1) dimension of target shape match input shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array([[[0, 1, 2],\n",
+       "        [0, 1, 2],\n",
+       "        [0, 1, 2],\n",
+       "        [0, 1, 2]],\n",
+       "\n",
+       "       [[3, 4, 5],\n",
+       "        [3, 4, 5],\n",
+       "        [3, 4, 5],\n",
+       "        [3, 4, 5]]], dtype=int32)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out = jax.lax.broadcast_in_dim(operand=input_array,shape=(2,4,3),broadcast_dimensions=(0,2,))\n",
+    "out\n",
+    "# here shape is target shape \n",
+    "# broadcast_dimensions --> dimension which match the input shape and target shape\n",
+    "# input shape -- > (2,3,)\n",
+    "# target_shape --> (2,4,3)\n",
+    "# at (0,2) dimension of target shape match input shape"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
