--- a/src/04_jax_lax_primitive.ipynb
+++ b/src/04_jax_lax_primitive.ipynb
@@ -1050,6 +1050,129 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# broadcasted_iota\n",
+    "\n",
+    "increment along specified dimension."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import jax\n",
+    "import jax.numpy as jnp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array([[[0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0]],\n",
+       "\n",
+       "       [[1, 1, 1, 1],\n",
+       "        [1, 1, 1, 1],\n",
+       "        [1, 1, 1, 1]]], dtype=int32)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jax.lax.broadcasted_iota(dtype=jnp.int32,shape=(2,3,4),dimension=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array([[[0, 0, 0, 0],\n",
+       "        [1, 1, 1, 1],\n",
+       "        [2, 2, 2, 2]],\n",
+       "\n",
+       "       [[0, 0, 0, 0],\n",
+       "        [1, 1, 1, 1],\n",
+       "        [2, 2, 2, 2]]], dtype=int32)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jax.lax.broadcasted_iota(dtype=jnp.int32,shape=(2,3,4),dimension=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array([[[0, 1, 2, 3],\n",
+       "        [0, 1, 2, 3],\n",
+       "        [0, 1, 2, 3]],\n",
+       "\n",
+       "       [[0, 1, 2, 3],\n",
+       "        [0, 1, 2, 3],\n",
+       "        [0, 1, 2, 3]]], dtype=int32)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jax.lax.broadcasted_iota(dtype=jnp.int32,shape=(2,3,4),dimension=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array([[[ 0,  1,  2,  3],\n",
+       "        [ 4,  5,  6,  7],\n",
+       "        [ 8,  9, 10, 11]],\n",
+       "\n",
+       "       [[12, 13, 14, 15],\n",
+       "        [16, 17, 18, 19],\n",
+       "        [20, 21, 22, 23]]], dtype=int32)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jnp.arange(24).reshape(2,3,4)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
