scalar valued fn , vector valued function , vjp ,jvp

--- a/src/05_auto_diff.ipynb
+++ b/src/05_auto_diff.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def f(x):\n",
+    "def scalar_valued_fn(x):\n",
     "    return x**4 + 12 * x + 1 / x"
    ]
   },
@@ -84,7 +84,7 @@
    ],
    "source": [
     "x = 11.0\n",
-    "print(f(x), df(x))"
+    "print(scalar_valued_fn(x), df(x))"
    ]
   },
   {
@@ -118,7 +118,7 @@
     "\n",
     "x_sym = sympy.symbols(\"x\")\n",
     "\n",
-    "f_sym = f(x_sym)\n",
+    "f_sym = scalar_valued_fn(x_sym)\n",
     "f_sym"
    ]
   },
@@ -192,7 +192,7 @@
    "source": [
     "dx = 1e-8\n",
     "\n",
-    "df_numeric = (f(x + dx) - f(x)) / dx\n",
+    "df_numeric = (scalar_valued_fn(x + dx) - scalar_valued_fn(x)) / dx\n",
     "df_numeric"
    ]
   },
@@ -222,7 +222,7 @@
    "source": [
     "import jax\n",
     "\n",
-    "df = jax.grad(f)\n",
+    "df = jax.grad(scalar_valued_fn)\n",
     "df(x)"
    ]
   },
@@ -241,7 +241,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = jax.grad(f)"
+    "df = jax.grad(scalar_valued_fn)"
    ]
   },
   {
@@ -1394,7 +1394,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def f(x, y):\n",
+    "def scalar_valued_fn(x, y):\n",
     "    return x**2 + 2 * y"
    ]
   },
@@ -1415,7 +1415,7 @@
     }
    ],
    "source": [
-    "df_dx = grad(f, argnums=0)  # df/dx = 2x since x is first parameter\n",
+    "df_dx = grad(scalar_valued_fn, argnums=0)  # df/dx = 2x since x is first parameter\n",
     "df_dx(2.0, 10.0)"
    ]
   },
@@ -1436,7 +1436,7 @@
     }
    ],
    "source": [
-    "df_dy = grad(f, argnums=1)  # df/dy = 2\n",
+    "df_dy = grad(scalar_valued_fn, argnums=1)  # df/dy = 2\n",
     "df_dy(4.0, 10.0)"
    ]
   },
@@ -1459,7 +1459,7 @@
    ],
    "source": [
     "# ? diff with both x and y\n",
-    "df_dx_dy = grad(f, argnums=(0, 1))\n",
+    "df_dx_dy = grad(scalar_valued_fn, argnums=(0, 1))\n",
     "df_dx_dy(5.0, 11.0)"
    ]
   },
@@ -1526,7 +1526,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def f(x, y):\n",
+    "def scalar_valued_fn(x, y):\n",
     "    res = x**2 + 2 * y\n",
     "    return res, res"
    ]
@@ -1545,7 +1545,7 @@
     }
    ],
    "source": [
-    "df_dx_dy = grad(f, argnums=(0, 1))\n",
+    "df_dx_dy = grad(scalar_valued_fn, argnums=(0, 1))\n",
     "try:\n",
     "    df_dx_dy(5.0, 11.0)\n",
     "except TypeError as e:\n",
@@ -1571,7 +1571,7 @@
     }
    ],
    "source": [
-    "df_dx_dy = grad(f, argnums=(0, 1), has_aux=True)\n",
+    "df_dx_dy = grad(scalar_valued_fn, argnums=(0, 1), has_aux=True)\n",
     "df_dx_dy(5.0, 11.0)"
    ]
   },
@@ -1602,11 +1602,11 @@
     }
    ],
    "source": [
-    "def f(x, y):\n",
+    "def scalar_valued_fn(x, y):\n",
     "    return x**2 + 2 * y\n",
     "\n",
     "\n",
-    "df_dx_dy = jax.value_and_grad(f, argnums=(0, 1))\n",
+    "df_dx_dy = jax.value_and_grad(scalar_valued_fn, argnums=(0, 1))\n",
     "df_dx_dy(5.0, 11.0)"
    ]
   },
@@ -1642,13 +1642,13 @@
     "import util\n",
     "\n",
     "\n",
-    "def f(x, y):\n",
+    "def scalar_valued_fn(x, y):\n",
     "    return x**2 + y**2\n",
     "\n",
     "\n",
-    "df = grad(f, argnums=(0, 1), has_aux=False)\n",
+    "df = grad(scalar_valued_fn, argnums=(0, 1), has_aux=False)\n",
     "\n",
-    "f(2.0, 3.0), df(2.0, 3.0)"
+    "scalar_valued_fn(2.0, 3.0), df(2.0, 3.0)"
    ]
   },
   {
@@ -1929,13 +1929,13 @@
     "from jax.lax import stop_gradient\n",
     "\n",
     "\n",
-    "def f(x, y):\n",
+    "def scalar_valued_fn(x, y):\n",
     "    return x**2 + stop_gradient(y**2)\n",
     "\n",
     "\n",
-    "df = grad(f, argnums=(0, 1), has_aux=False)\n",
+    "df = grad(scalar_valued_fn, argnums=(0, 1), has_aux=False)\n",
     "\n",
-    "f(2.0, 3.0), df(2.0, 3.0)"
+    "scalar_valued_fn(2.0, 3.0), df(2.0, 3.0)"
    ]
   },
   {
@@ -2213,7 +2213,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def f(x):\n",
+    "def scalar_valued_fn(x):\n",
     "    return x**3 + 12 * x + 7 * x * jnp.sin(x)"
    ]
   },
@@ -2237,8 +2237,8 @@
     "x = np.linspace(-10, 10, num=500)\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(10, 10))\n",
-    "ax.plot(x, f(x), label=\"x**3 + 12*x + 7*x*sin(x)\")\n",
-    "df = f\n",
+    "ax.plot(x, scalar_valued_fn(x), label=\"x**3 + 12*x + 7*x*sin(x)\")\n",
+    "df = scalar_valued_fn\n",
     "for d in range(1, 4):\n",
     "    df = jax.grad(df)\n",
     "    ax.plot(x, jax.vmap(df)(x), label=f\"#{d} derivative\")\n",
@@ -2260,7 +2260,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def f(x):\n",
+    "def scalar_valued_fn(x):\n",
     "    return [x[0] ** 2 + x[1] ** 2 + x[2] ** 3, x[0] * 2 + x[1] * 4]\n",
     "\n",
     "x = jnp.array([1.,2.,5.])"
@@ -2283,7 +2283,7 @@
     }
    ],
    "source": [
-    "jax.jacfwd(f)(x)"
+    "jax.jacfwd(scalar_valued_fn)(x)"
    ]
   },
   {
@@ -2303,7 +2303,7 @@
     }
    ],
    "source": [
-    "jax.jacrev(f)(x)"
+    "jax.jacrev(scalar_valued_fn)(x)"
    ]
   },
   {
@@ -2338,6 +2338,394 @@
    ],
    "source": [
     "%timeit -n100 jax.jacrev(f)(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Forward mode\n",
+    "\n",
+    "$f: \\mathbb{R}^n \\rightarrow \\mathbb{R}^m$\n",
+    "\n",
+    "when m == 1 then function is called scalar valued function,$f'$ will have shape of row vector (1xn) this call grad vector.\n",
+    "\n",
+    "when m == m then function is called vector valued function,$f'$ will have shape matrix (mxn) this call jacobian matrix.\n",
+    "\n",
+    "\n",
+    "* primal --> forward trace  ie function is evaluated at point x  ===> f(x) and x belong to $\\mathbb{R}^n$\n",
+    "* jacobian matrix will be (out x in) (1xn) ie row vector ,, (partial derivative evaluated at point x)\n",
+    "* tangent --> derivative trace ie linear combination of jacobian full matrix multiplied by given vector (small change vector) this vector is called multiplication point.\n",
+    "\n",
+    "primal,tangent are computed in same pass flow."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import jax \n",
+    "import jax.numpy as jnp\n",
+    "\n",
+    "def scalar_valued_fn(x:jax.Array):\n",
+    "    return jnp.log(x[0]) + x[0]*x[1] - jnp.sin(x[1])\n",
+    "\n",
+    "evaluation_point = jnp.array([2.,5.])\n",
+    "multiplication_point = jnp.array([1.,0.])\n",
+    "\n",
+    "primal,tangent = jax.jvp(fun=scalar_valued_fn,primals=(evaluation_point,),tangents=(multiplication_point,))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array(11.652072, dtype=float32)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "primal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array(5.5, dtype=float32)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tangent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array([5.5      , 1.7163378], dtype=float32)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full_jac  = jax.jacfwd(fun=scalar_valued_fn)(evaluation_point)\n",
+    "full_jac"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array(5.5, dtype=float32)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full_jac @ multiplication_point"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Reverse Mode\n",
+    "\n",
+    "$f: \\mathbb{R}^n \\rightarrow \\mathbb{R}^m$\n",
+    "\n",
+    "when m == 1 then function is called scalar valued function,$f'$ will have shape of row vector (1xn) this call grad vector.\n",
+    "\n",
+    "when m == m then function is called vector valued function,$f'$ will have shape matrix (mxn) this call jacobian matrix.\n",
+    "\n",
+    "* In Reverse mode ,has two-phase process\n",
+    "    * first phase in forward pass --> during this phase the function is evaluated at point x. and record the computation graph.\n",
+    "    * second phase is backward pass --> derivative are calculated by propagating the adjoint/cotangent in reverse (ie. output to input)\n",
+    "\n",
+    "\n",
+    "* primal --> forward trace  ie function is evaluated at point x  ===> f(x) and x belong to $\\mathbb{R}^n$\n",
+    "* jacobian matrix will be (out x in) (1xn) ie row vector ,, (partial derivative evaluated at point x)\n",
+    "* tangent --> derivative trace ie linear combination of jacobian full matrix multiplied by given vector (small change vector) this vector is called multiplication point."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Scalar valued function\n",
+    "\n",
+    "$f: \\mathbb{R}^n \\rightarrow \\mathbb{R}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import jax \n",
+    "import jax.numpy as jnp\n",
+    "\n",
+    "def scalar_valued_fn(x:jax.Array):\n",
+    "    return jnp.log(x[0]) + x[0]*x[1] - jnp.sin(x[1])\n",
+    "\n",
+    "evaluation_point = jnp.array([2.,5.])\n",
+    "left_multiplication_point = jnp.array(0.8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array(11.652072, dtype=float32)"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# vjp take func and evaluation point (primal) \n",
+    "# and return the func that evaluated at evaluation point,\n",
+    "# computation graph to calculate derivative \n",
+    "primal, vjp_fn = jax.vjp(scalar_valued_fn,evaluation_point)\n",
+    "primal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(Array([1.2, 3.6], dtype=float32),)"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# left_multiplication_point @ f'\n",
+    "vjp_fn(left_multiplication_point)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array([5.5      , 1.7163378], dtype=float32)"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full_jac = jax.jacrev(scalar_valued_fn)(evaluation_point)\n",
+    "full_jac"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array([4.4      , 1.3730702], dtype=float32)"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "left_multiplication_point * full_jac"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Vector valued function\n",
+    "\n",
+    "$f: \\mathbb{R}^n \\rightarrow \\mathbb{R}^m$\n",
+    "\n",
+    "\n",
+    "Shapes :\n",
+    "* evaluation point          --> n\n",
+    "* jacobian matrix           --> mxn\n",
+    "* left multiplication point --> 1xm\n",
+    "* f_eval                    --> m\n",
+    "* vjp_fn out                --> n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import jax \n",
+    "import jax.numpy as jnp\n",
+    "\n",
+    "def vector_valued_fn(x:jax.Array):\n",
+    "    return jnp.power(x,2) + jnp.multiply(x,2)\n",
+    "\n",
+    "evaluation_point = jnp.array([2.,5.])\n",
+    "left_multiplication_point = jnp.array([0.2,0.3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array([ 8., 35.], dtype=float32)"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vector_valued_fn(evaluation_point)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array([ 8., 35.], dtype=float32)"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f_evaluated ,vjp_fn =  jax.vjp(vector_valued_fn,evaluation_point)\n",
+    "f_evaluated"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(Array([1.2, 3.6], dtype=float32),)"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vjp_fn(left_multiplication_point)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array([[ 6.,  0.],\n",
+       "       [ 0., 12.]], dtype=float32)"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full_jac = jax.jacrev(vector_valued_fn)(evaluation_point)\n",
+    "full_jac"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array([1.2      , 3.6000001], dtype=float32)"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "left_multiplication_point @ full_jac"
    ]
   },
   {
